# process-ghosting

./: Cargo.toml  README.md  build.bat  build.rs  copy-exclude.txt
.github/workflows/: slidev-deploy.yaml
pid-greeter/: Cargo.toml
pid-greeter/src/: main.rs
presentation/: package.json  pnpm-lock.yaml  slide-bottom.vue  slides.md
presentation/components/: ArrowDraw.vue  Debug.vue  Footnote.vue  Footnotes.vue  Important.vue  Question.vue  TerminalType.vue
presentation/public/: win8-demo.webm
presentation/theme/styles/: dark-mode.css  layouts.css
process-ghosting/: Cargo.toml
process-ghosting/src/: main.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs  safehandle.rs  unicode_string.rs
