[workspace]
resolver = "3"
members = ["pid-greeter", "process-ghosting", "utils"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = "4.5.54"
clio = "0.3.5"
env_logger = "0.11.8"
log = "0.4.29"
ntapi = "0.4.2"
utils = { version = "0.1.0", path = "utils" }

[workspace.dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
