[package]
name = "process-ghosting"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clio = { workspace = true, features = ["clap-parse"] }
env_logger = { workspace = true }
log = { workspace = true, features = ["kv"] }
ntapi = { workspace = true }
utils = { workspace = true }
windows = { workspace = true }
